# nci-array

./: Cargo.toml
non_contiguously_indexed_array/: Cargo.toml
non_contiguously_indexed_array/src/: lib.rs
non_contiguously_indexed_array_builder/src/: builder.rs
non_contiguously_indexed_array_macros/: Cargo.toml
non_contiguously_indexed_array_macros/src/: integer.rs  lib.rs
non_contiguously_indexed_array_macros/tests/: basic_tests.rs
non_contiguously_indexed_array_shared/: Cargo.toml
non_contiguously_indexed_array_shared/src/: index.rs
